            - New routine blockAbbrs() that returns the output of
              writeBlockAbbrs() in string format.
            - All access to the underlying triangulation is now const only.
        Class Script:
            - Added a copy constructor and a copy assignment operator.
            - Added member and global swap() functions.
            - Routines addVariable(), addVariableName() and setVariableValue()
              now take their value arguments by std::weak_ptr, and support a
              default argument representing a null variable.
            - Scripts no longer notify their listeners when a variable value
              is destroyed or changes its packet label (but in the former case
              they still correctly reset the variable value to null).
            - New routines listenVariables() and unlistenVariables().
        Class SFSAlt, SFSAltSet:
            - Removed the old SFSAltSet class; replaced this with a new SFSAlt
              class with a static altSet() function that returns a std::vector.
        Class SFSpace:
            - Added move constructors and move assignment operators.
            - Added member and global swap() functions.
            - Routine isLensSpace() now returns a std::optional by value,
              not a newly created pointer that could be null.
            - Routine insertFibre() now throws an exception if alpha is zero.
        Class ShortArray:
            - New class that is essentially a variable-but-bounded sized
              std::array.
        Class SigCensus:
            - New typedef SigIsoList to replace the old global SigIsoList.
            - The old global formSigCensus() is now a static member function
              formCensus(), which uses a type-safe template-based mechanism
              for callbacks instead of function pointers with void* arguments.
            - Function run() is now private.  The only way to access