@@ -45,7 +45,7 @@ void addContainer(pybind11::module_& m) {
         .def_readonly_static("typeID", &Container::typeID)
     ;
     regina::python::add_output(c);
-    regina::python::packet_eq_operators(c);
+    regina::python::packet_disable_eq_operators(c);
 
     m.def("swap", (void(*)(Container&, Container&))(regina::swap));
 }
