@@ -138,6 +138,7 @@ void addSnapPeaTriangulation(pybind11::module_& m) {
     // get left with the inherited versions from Triangulation<3>.
     regina::python::add_output(c2);
     regina::python::add_packet_data(c2);
+    regina::python::packet_eq_operators(c2);
 
     regina::python::addListView<decltype(SnapPeaTriangulation().cusps())>(m);
 
